# bootloader-stm32l-rust

./: .gitignore  Cargo.toml  README.md  blacklist.txt.example  build.rs  memory.x  pubkey.pem.example  stm32l0x2.svd
docs/: setup-yubikey.md
src/: int_flash.rs  main.rs
