[package]
authors = ["s"]
edition = "2018"
readme = "README.md"
name = "mcu-bootloader-rust"
version = "0.1.0"

[features]

# Choose one of these boards (cargo build --features "board-XXX")
board-6001-devkit = []
board-6001-sensor = []
board-6001-gateway = []
board-4006-sensor = []


[build-dependencies]
openssl = { version = "0.10.30", features = ["vendored"]}
hex = "0.4.3"


[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
panic-reset = "0.1.1"
spi-memory = "0.2.0"

[dependencies.sha2]
version = "0.9.1"
default-features = false

[dependencies.p256]
version = "0.5.2"
default-features = false
features = [ "ecdsa" ]

[dependencies.signature]
version = "1.2.2"
default-features = false
features = [ "digest-preview" ]

[dependencies.stm32l0xx-hal]
version = "0.10.0"
features = ["mcu-STM32L082CZYx", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "mcu-bootloader-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"
